Add new models and API endpoint for setting windows to topmost
