# src/_generated/typescript-fetch/models/TopMostRequest.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * FastAPI
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface TopMostRequest
+ */
+export interface TopMostRequest {
+    /**
+     * 
+     * @type {number}
+     * @memberof TopMostRequest
+     */
+    hwnd: number;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof TopMostRequest
+     */
+    top: boolean;
+}
+
+/**
+ * Check if a given object implements the TopMostRequest interface.
+ */
+export function instanceOfTopMostRequest(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "hwnd" in value;
+    isInstance = isInstance && "top" in value;
+
+    return isInstance;
+}
+
+export function TopMostRequestFromJSON(json: any): TopMostRequest {
+    return TopMostRequestFromJSONTyped(json, false);
+}
+
+export function TopMostRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): TopMostRequest {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'hwnd': json['hwnd'],
+        'top': json['top'],
+    };
+}
+
+export function TopMostRequestToJSON(value?: TopMostRequest | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'hwnd': value.hwnd,
+        'top': value.top,
+    };
+}
+
